// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/fitness > display fitness breakdown and stats 1`] = `
"**1.15%** complete
**7.31** / 637 miles
---
Needed to be on track today
- **4.9** miles
Needed to be on track this week
- **13.63** miles / 5 days
- **2.73** miles per day
Needed to complete the challenge
- **629.59** miles / 359 days
- **1.75** miles per day
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 7, 12:00am
"
`;

exports[`lib/fitness > handles Sunday when ahead 1`] = `
"**3.45%** complete
**21.94** / 637 miles
---
You're **1** mile ahead for today!
You're **1** mile ahead for the week!
Needed to complete the challenge
- **614.96** miles / 354 days
- **1.74** miles per day
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 12, 12:00am
"
`;

exports[`lib/fitness > handles Sunday when behind 1`] = `
"**1.95%** complete
**12.43** / 637 miles
---
Needed to be on track today
- **8.51** miles
Needed to be on track this week
- **8.51** miles today
Needed to complete the challenge
- **624.48** miles / 354 days
- **1.76** miles per day
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 12, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when ahead for today and for the week 1`] = `
"**3.32%** complete
**21.13** / 637 miles
---
You're **0.19** miles ahead for today!
You're **0.19** miles ahead for the week!
Needed to complete the challenge
- **615.78** miles / 354 days
- **1.74** miles per day
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 12, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when behind for the week 1`] = `
"**3.22%** complete
**20.51** / 637 miles
---
You're **8.29** miles ahead for today!
Needed to be on track this week
- **0.43** miles / 5 days
- **0.09** miles per day
Needed to complete the challenge
- **616.4** miles / 359 days
- **1.72** miles per day
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 7, 12:00am
"
`;

exports[`lib/fitness > handles pluralization when behind for today 1`] = `
"**1.76%** complete
**11.22** / 637 miles
---
Needed to be on track today
- **2.74** miles
Needed to be on track this week
- **9.72** miles / 4 days
- **2.43** miles per day
Needed to complete the challenge
- **625.69** miles / 358 days
- **1.75** miles per day
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 8, 12:00am
"
`;

exports[`lib/fitness > handles stats not being defined 1`] = `
"**1.95%** complete
**12.43** / 637 miles
---
You're **0.21** miles ahead for today!
Needed to be on track this week
- **8.51** miles / 5 days
- **1.7** miles per day
Needed to complete the challenge
- **624.48** miles / 359 days
- **1.74** miles per day
---
Stats
- **<unknown>** calories burned
- **<unknown>** total time
- **<unknown>** total workouts
---
Updated Jan 7, 12:00am
"
`;

exports[`lib/fitness > handles the challenge being completed 1`] = `
"**100%** complete
**1123.87** / 637 miles
---
🎉 You completed the challenge! 🎉
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Dec 28, 12:00am
"
`;

exports[`lib/fitness > handles the year being over 1`] = `
"**3.33%** complete
**21.19** / 637 miles
---
😭 You failed the challenge by **615.72** miles
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 1, 12:00am
"
`;

exports[`lib/fitness > shows a different message if ahead for the week 1`] = `
"**3.41%** complete
**21.75** / 637 miles
---
You're **11.28** miles ahead for today!
You're **0.81** miles ahead for the week!
Needed to complete the challenge
- **615.16** miles / 360 days
- **1.71** miles per day
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 6, 12:00am
"
`;

exports[`lib/fitness > shows a different message if ahead for today 1`] = `
"**3.12%** complete
**19.88** / 637 miles
---
You're **7.67** miles ahead for today!
Needed to be on track this week
- **1.06** miles / 5 days
- **0.21** miles per day
Needed to complete the challenge
- **617.02** miles / 359 days
- **1.72** miles per day
---
Stats
- **2,138** calories burned
- **55:11:25** total time
- **8** total workouts
---
Updated Jan 7, 12:00am
"
`;
